Fix GitHub Actions workflow YAML

--- a/.github/workflows/rain-telegram.yml
+++ b/.github/workflows/rain-telegram.yml
@@ -2,9 +2,9 @@ name: Rain Alert to Telegram (PR)
 
 on:
   schedule:
-    - cron: "0 9 * * *"     # 06:00 BRT
-    - cron: "50 19 * * *"   # 16:50 BRT
-    - cron: "0 0 * * *"     # 21:00 BRT
+    - cron: "0 9 * * *"     # 06:00 BRT (UTC-3)
+    - cron: "50 19 * * *"   # 16:50 BRT (UTC-3)
+    - cron: "0 0 * * *"     # 21:00 BRT (UTC-3) = 00:00 UTC
   workflow_dispatch:
     inputs:
       mode:
@@ -15,7 +15,6 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
 
@@ -33,14 +32,25 @@ jobs:
 
       - name: Decide execution mode
         id: mode
+        shell: bash
         run: |
           HOUR=$(date -u +%H)
           MIN=$(date -u +%M)
 
           if [ "$HOUR" = "00" ] && [ "$MIN" = "00" ]; then
-            echo "value=tomorrow" >> $GITHUB_OUTPUT
+            echo "value=tomorrow" >> "$GITHUB_OUTPUT"
           else
-            echo "value=today" >> $GITHUB_OUTPUT
+            echo "value=today" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Run weat
+      - name: Run weather script
+        env:
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+        shell: bash
+        run: |
+          MODE="${{ github.event.inputs.mode }}"
+          if [ "${{ github.event_name }}" = "schedule" ]; then
+            MODE="${{ steps.mode.outputs.value }}"
+          fi
+          python rain_daily_pr.py "$MODE"
