--- a/.github/workflows/rain-telegram.yml
+++ b/.github/workflows/rain-telegram.yml
@@ -2,9 +2,10 @@ name: Rain Alert to Telegram (PR)
 
 on:
   schedule:
-    - cron: "0 9 * * *"     # 06:00 BRT (UTC-3)
-    - cron: "50 19 * * *"   # 16:50 BRT (UTC-3)
-    - cron: "0 0 * * *"     # 21:00 BRT (UTC-3) = 00:00 UTC
+    - cron: "*/5 * * * *"   # TESTE: roda a cada 5 minutos
+    - cron: "0 9 * * *"
+    - cron: "50 19 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
     inputs:
       mode:
