--- a/.github/workflows/rain-telegram.yml
+++ b/.github/workflows/rain-telegram.yml
@@ -6,6 +6,7 @@ on:
     - cron: "0 9 * * *"
     - cron: "50 19 * * *"
     - cron: "0 0 * * *"
+    - cron: "20 1 * * *"     # 22:20 BRT (UTC-3)
   workflow_dispatch:
     inputs:
       mode:
