--- a/.github/workflows/rain-telegram.yml
+++ b/.github/workflows/rain-telegram.yml
@@ -1,17 +1,15 @@
-name: Rain Alert to Telegram (PR)
+name: Weather Alerts to Telegram (PR)
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # TESTE: roda a cada 5 minutos
-    - cron: "0 9 * * *"
-    - cron: "50 19 * * *"
-    - cron: "0 0 * * *"
-    - cron: "20 1 * * *"     # 22:20 BRT (UTC-3)
+    - cron: "0 9 * * *"      # 06:00 BRT
+    - cron: "50 19 * * *"    # 16:50 BRT
+    - cron: "40 1 * * *"     # 22:40 BRT
   workflow_dispatch:
     inputs:
       mode:
-        description: "today ou tomorrow (teste manual)"
-        required: false
+        description: "today (previsão de hoje) ou tomorrow (previsão de amanhã)"
+        required: true
         default: "today"
 
 jobs:
@@ -21,31 +19,32 @@ jobs:
       contents: read
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install deps
         run: pip install requests
 
-      - name: Decide execution mode
-        id: mode
+      - name: Decide mode by schedule time (UTC)
+        id: decide
         shell: bash
         run: |
           HOUR=$(date -u +%H)
           MIN=$(date -u +%M)
 
-          if [ "$HOUR" = "00" ] && [ "$MIN" = "00" ]; then
-            echo "value=tomorrow" >> "$GITHUB_OUTPUT"
+          # 01:40 UTC == 22:40 BRT => tomorrow
+          if [ "$HOUR" = "01" ] && [ "$MIN" = "40" ]; then
+            echo "mode=tomorrow" >> "$GITHUB_OUTPUT"
           else
-            echo "value=today" >> "$GITHUB_OUTPUT"
+            echo "mode=today" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Run weather script
+      - name: Run script
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
@@ -53,6 +52,6 @@ jobs:
         run: |
           MODE="${{ github.event.inputs.mode }}"
           if [ "${{ github.event_name }}" = "schedule" ]; then
-            MODE="${{ steps.mode.outputs.value }}"
+            MODE="${{ steps.decide.outputs.mode }}"
           fi
           python rain_daily_pr.py "$MODE"
